<resources>
    <string name="app_name">Estuda+</string>

    <!-- Login Screen -->
    <string name="login_title">Bem-vindo ao \n Estuda+</string>
    <string name="login_subtitle">Seu aplicativo para controle de estudos</string>
    <string name="digite_seu_usu_rio">Digite seu usuário</string>
    <string name="digite_sua_senha">Digite sua senha</string>
    <string name="esqueci_minha_senha">Esqueci minha senha</string>
    <string name="login">Login</string>
    <string name="materias_adicionadas">MATERIAS ADICIONADAS</string>
    <string name="cadastre_o_que_voce_ira_estudar">Cadastre o que voce ira estudar</string>
    <string name="nome_da_materia">Nome da materia</string>
    <string name="este_texto_parece_estar_em_um_papel">Este texto parece estar em um papel.</string>
    <string name="cadastre_as_materias_que_voce_ira_estudar">Cadastre as materias que voce ira estudar</string>
    <string name="adicionar_materias">Adicionar Materias</string>
    <string name="portugues">Portugues</string>
    <string name="finalizar_e_salvar">FINALIZAR E SALVAR</string>
</resources>