<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddSubject">


    <TextView
        android:id="@+id/tv_adicionar_materia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/adicionar_materias"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:text="@string/cadastre_as_materias_que_voce_ira_estudar"
        app:layout_constraintStart_toStartOf="@id/tv_adicionar_materia"
        app:layout_constraintTop_toBottomOf="@id/tv_adicionar_materia" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_papel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:cardBackgroundColor="@android:color/white"
        app:cardCornerRadius="20sp"
        app:cardElevation="10dp"
        app:layout_constraintStart_toStartOf="@id/subtitle"
        app:layout_constraintTop_toBottomOf="@id/subtitle">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="50dp">

            <TextView
                android:id="@+id/meu_texto1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/este_texto_parece_estar_em_um_papel"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/meu_texto2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:hint="@string/nome_da_materia"
                app:layout_constraintTop_toBottomOf="@id/meu_texto1" />

            <TextView
                android:id="@+id/meu_texto3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cadastre_o_que_voce_ira_estudar"
                android:textSize="12sp"
                app:layout_constraintTop_toBottomOf="@id/meu_texto2" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/materias_adicionadas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        android:gravity="left"
        android:text="@string/materias_adicionadas"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@id/card_papel"
        app:layout_constraintTop_toBottomOf="@id/card_papel" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/meu_input_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="Portugues"
        app:endIconMode="custom"
        app:endIconDrawable="@drawable/baseline_edit_24"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:boxStrokeColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/meu_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

   <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/meu_input_layout2"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="Matematica"
        app:endIconMode="custom"
        app:endIconDrawable="@drawable/baseline_edit_24"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:boxStrokeColor="@color/black"
       app:layout_constraintStart_toStartOf="@id/meu_input_layout"
       app:layout_constraintTop_toBottomOf="@id/meu_input_layout"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/meu_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        app:circularflow_defaultRadius="20sp"
        android:layout_marginHorizontal="30sp"
        android:text="FINALIZAR E SALVAR"
        app:layout_constraintStart_toStartOf="@id/meu_input_layout2"
        app:layout_constraintTop_toBottomOf="@id/meu_input_layout2" />

</androidx.constraintlayout.widget.ConstraintLayout>